<resources>
    <string name="app_name">Patient</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="loading_dialog_loading_msg">Loading…</string>
    <string name="loading_dialog_uploading_msg">Uploading… %1$d\%%</string>
    <string name="click_twice">Click one more time to exit</string>
    <string name="no_internet_connection">Please check your internet connection</string>
    <string name="an_error_has_occurred">An error has occurred</string>
    <string name="get_started_btn_text">Get Started</string>
    <string name="find_the_best_doctor_msg">Find The Best Doctor</string>
    <string name="doctors">Doctors</string>
    <string name="appointments">Appointments</string>
    <string name="monitor_appointment_data">Monitor Your Appointments Data</string>
    <string name="prescriptions">Prescriptions</string>
    <string name="never_lose_prescriptions">Never Lose Your Appointment Prescriptions</string>
    <string name="hrs">HRS</string>
    <string name="health_recommendation_system">Health Recommendation System</string>
    <string name="skip">Skip</string>
    <string name="log_in">Login</string>
    <string name="phone_auth">Phone Authentication</string>
    <string name="input_mobile_number">Mobile Number</string>
    <string name="enter_your_new_phone_number">Enter Your Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="enter_code">Enter Code</string>
    <string name="activation_msg">We have sent you an SMS with a 6-digit verification code.</string>
    <string name="activation_didnt_receive_code">Didn\'t receive the code ?</string>
    <string name="resend_code">Resend Code</string>
    <string name="get_code">Get Code</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="phone_authenticated_successfully">Phone  Authenticated Successfully</string>
    <string name="invalid_verification_code">Invalid Verification Code</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_weight">Enter Your Weight in kg</string>
    <string name="enter_your_height">Enter Your Height in cm</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions.</string>
    <string name="read_terms">Read it</string>
    <string name="sign_up">Sign Up</string>
    <string name="gender">Gender</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="birth_date">Birth Date</string>
    <string name="please_enter_valid_name">Please enter a valid name</string>
    <string name="please_enter_valid_weight">Please enter a valid weight</string>
    <string name="please_enter_valid_height">Please enter a valid height</string>
    <string name="please_enter_your_birth_date">Please enter your birth date</string>
    <string name="complete_register">Complete Register</string>
    <string name="my_doctors">My Doctors</string>
    <string name="recommendations">Recommendations</string>
    <string name="profile">Profile</string>
    <string name="no_image_selected">No image was selected</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="change_phone">Change Phone</string>
    <string name="my_chronic_diseases">My Chronic Diseases</string>
    <string name="my_medical_files">My Medical Files</string>
    <string name="settings">Settings</string>
    <string name="dialog_logout">Logout</string>
    <string name="dialog_logout_msg">Are you sure you want to logout?</string>
    <string name="weight_placeholder">%1$.2f KG</string>
    <string name="height_placeholder">%1$.2f CM</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_accoeunt_qr_cod">My Account QR Code</string>
    <string name="show_this_qr_code_to_your_doctor_to_add_you">Show this QR-Code to your doctor to add you</string>
    <string name="last_appointment">Last Appointment:</string>
    <string name="next_appointment">Next Appointment:</string>
    <string name="not_available">N/A</string>
    <string name="input_search">Search</string>
    <string name="doctor_appointments">Doctor Appointments</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="doctor_notes">Doctor Notes</string>
    <string name="appointment_images">Appointment Images</string>
    <string name="date">Date</string>
    <string name="last_updated">Last Updated</string>
    <string name="permission_denied">Permission denied</string>
    <string name="permission_denied_never_ask">Permission denied with a never-ask option</string>
    <string name="select_disease">Select your chronic disease</string>
    <string name="data_updated_successfully">Your Data Got Updated Successfully</string>
    <string name="recommended_dishes_for_you">Recommended dishes for you</string>
    <string name="no_of_reviews">(%1$d Reviews)</string>
    <string name="minutes_count">%1$d Minutes</string>
    <string name="no_food_recommendations">Your selected disease doesn\'t have any food recommendations available on our system yet, please check again soon</string>
    <string name="this_recommendation_service_is_based_on">This recommendation service is based on chronic diseases healthy diet recommendations, if you have any please register them through your profile screen</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
</resources>