<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_host_graph"
    app:startDestination="@id/nav_my_doctors">

    <action
        android:id="@+id/nav_destination"
        app:destination="@id/nav_my_doctors"/>

    <fragment
        android:id="@+id/nav_my_doctors"
        android:label="@string/my_doctors"
        android:name="com.msaproject.patient.ui.my_doctors.MyDoctorsFragment"
        tools:layout="@layout/fragment_my_doctors"/>

    <fragment
        android:id="@+id/nav_recommendations"
        android:label="@string/recommendations"
        android:name="com.msaproject.patient.ui.recommendations.RecommendationsFragment"
        tools:layout="@layout/fragment_recommendations"/>


    <fragment
        android:id="@+id/nav_profile"
        android:label="@string/profile"
        android:name="com.msaproject.patient.ui.profile.ProfileFragment"
        tools:layout="@layout/fragment_profile"/>

</navigation>