<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appointments.appointment_details.AppointmentDetailsActivity"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvi_doctor_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="@dimen/padding"
            android:text="@string/doctor_notes"
            android:textColor="@color/colorSecondary"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_doctor_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvi_doctor_notes"
            android:background="@drawable/shape_grey_boarder"
            android:layout_margin="@dimen/padding"
            android:drawablePadding="8dp"
            android:maxLines="2"
            android:padding="8dp"
            android:text="@string/not_available"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_doctor_notes"
            android:gravity="start|center_vertical"
            android:lines="3"/>

        <TextView
            android:id="@+id/tv_appointment_Images"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_doctor_notes"
            android:layout_margin="@dimen/padding"
            android:text="@string/appointment_images"
            android:textColor="@color/colorSecondary"
            android:textSize="21sp"
            android:textStyle="bold"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_appointment_images"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tv_appointment_Images"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingBottom="@dimen/padding"
            android:layout_marginStart="@dimen/padding"
            android:layout_marginTop="@dimen/padding"
            android:layout_marginEnd="@dimen/padding"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>