<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.edit_profile.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/fl_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_gravity="top"
                android:background="@color/colorPrimary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_image_holder"
                android:layout_width="103dp"
                android:layout_height="103dp"
                android:layout_gravity="center"
                android:layout_margin="@dimen/half_padding"
                android:background="@drawable/ic_user_placeholder_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_image"
                    android:layout_width="93dp"
                    android:layout_height="93dp"
                    android:src="@drawable/ic_user_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/ib_add_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparent"
                    app:srcCompat="@drawable/ic_camera"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_image"
                    app:layout_constraintEnd_toEndOf="@+id/iv_image" />

                <ImageButton
                    android:id="@+id/ib_remove_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorTransparent"
                    app:srcCompat="@drawable/ic_remove_border"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_image"
                    app:layout_constraintStart_toStartOf="@+id/iv_image"
                    android:visibility="gone"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fl_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <EditText
                    android:hint="@string/enter_your_name"
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:maxLength="24"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:drawableStartCompat="@drawable/ic_user_name_icon"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:textAlignment="viewStart"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <EditText
                    android:hint="@string/enter_your_weight"
                    android:id="@+id/et_weight"
                    android:maxLength="32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    app:drawableStartCompat="@drawable/ic_weight_scale"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:textAlignment="viewStart"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_name" />


                <EditText
                    android:id="@+id/et_height"
                    android:hint="@string/enter_your_height"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    android:inputType="number"
                    android:maxLength="16"
                    android:drawablePadding="@dimen/drawable_padding"
                    android:textAlignment="viewStart"
                    app:drawableStartCompat="@drawable/ic_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_weight" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="?attr/editTextBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_height">

                    <TextView
                        android:id="@+id/tv_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:text="@string/birth_date"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/ic_calendar_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tv_date"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/textBlue"
                        android:textSize="18sp"
                        app:drawableEndCompat="@drawable/ic_next_down"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/tv_date_text"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    android:background="?attr/editTextBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_date">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:text="@string/gender"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp"
                        app:drawableStartCompat="@drawable/ic_gender_icon"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioGroup
                        android:id="@+id/rg_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <RadioButton
                            android:id="@+id/rb_male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="24dp"
                            android:buttonTint="@color/colorSecondary"
                            android:checked="true"
                            android:text="@string/radio_male"
                            android:textColor="@color/colorPrimary" />

                        <RadioButton
                            android:id="@+id/rb_female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:buttonTint="@color/colorSecondary"
                            android:text="@string/radio_female"
                            android:textColor="@color/colorPrimary" />

                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/btn_apply_changes"
                    style="@style/RegisterButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    android:padding="@dimen/padding"
                    android:text="@string/apply_changes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cl_gender" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>